--- a/client/css/style.css
+++ b/client/css/style.css
@@ -8012,7 +8012,7 @@ html:not([dir="rtl"]) .list-group {
   z-index: 1;
   text-decoration: none;
   color: white;
-  background-color: #321fdb;
+  background-color: #ced2d8;
 }
 
 .list-group-item-action:active {
@@ -18839,5 +18839,30 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
   }
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #3498db;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 47%;
+  z-index: 1;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 /*# sourceMappingURL=style.css.map */
