frontend attached to flask

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
   <base href="./">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
+  <link href="/static/node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
@@ -40,14 +40,14 @@
 </div>
 
 <!-- CoreUI and necessary plugins-->
-<script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
+<script src="/static/node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
 <!--[if IE]><!-->
-<script src="node_modules/@coreui/icons/js/svgxuse.min.js"></script>
+<script src="/static/node_modules/@coreui/icons/js/svgxuse.min.js"></script>
 <!--<![endif]-->
 <!-- Plugins and scripts required by this view-->
-<script src="node_modules/@coreui/chartjs/dist/js/coreui-chartjs.bundle.js"></script>
-<script src="node_modules/@coreui/utils/dist/coreui-utils.js"></script>
-<script src="js/home.js"></script>
+<script src="/static/node_modules/@coreui/chartjs/dist/js/coreui-chartjs.bundle.js"></script>
+<script src="/static/node_modules/@coreui/utils/dist/coreui-utils.js"></script>
+<script src="/static/js/home.js"></script>
 <script>
 
   let input = document.getElementById("search_input");
