--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,17 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
+  <link href="/static/node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body class="c-app flex-row align-items-center" style="background-color: #3c4b64">
 
   <!-- Add your site or application content here -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/static/js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="/static/js/plugins.js"></script>
+  <script src="/static/js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -55,11 +55,11 @@
   </div>
 
   <!-- CoreUI and necessary plugins-->
-  <script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
+  <script src="/static/node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
   <!--[if IE]><!-->
-  <script src="node_modules/@coreui/icons/js/svgxuse.min.js"></script>
+  <script src="/static/node_modules/@coreui/icons/js/svgxuse.min.js"></script>
   <!--<![endif]-->
-  <script src="js/main.js"></script>
+  <script src="/static/js/main.js"></script>
   <script>
 
     let input = document.getElementById("search_input");
