--- a/templates/company.html
+++ b/templates/company.html
@@ -3,8 +3,8 @@
   <base href="./">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <link href="/style/css/style.css" rel="stylesheet">
-  <link href="/style/node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
+  <link href="/static/node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
