--- a/templates/index.html
+++ b/templates/index.html
@@ -32,14 +32,14 @@
           <div class="card p-4">
             <div class="card-body">
               <h1>Search company</h1>
-              <p class="text-muted">Check if company is trusted</p>
+              <p>Check if company is trusted</p>
               <div class="input-group mb-3">
                 <div class="card-body">
                   <form class="form-horizontal" action="" method="post" onSubmit="return false;">
                     <div class="form-group row">
                       <div class="col-md-12">
                         <div class="input-group">
-                          <input class="form-control" id="search_input" type="text" name="input2-group2" placeholder="Type..." autocomplete="email"><span class="input-group-append">
+                          <input class="form-control" style="color: black" id="search_input" type="text" name="input2-group2" placeholder="Type..." autocomplete="email"><span class="input-group-append">
                                 <button id="search_btn" onclick="onSearch()" class="btn btn-info" type="button">Search</button></span>
                         </div>
                       </div>
