display company details

--- a/templates/company.html
+++ b/templates/company.html
@@ -98,48 +98,32 @@
 
       <div style="padding-right: 20px; width: 50%">
         <div class="card card-accent-info" style="height: 100%;">
-          <div class="card-header">Info</div>
-          <div class="card-body" style="font-size: 1.2vw;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+          <div class="card-header">Company details</div>
+          <div class="card-body" style="font-size: 1.0vw; width: 40vw">
+            <small><strong>Company Name:</strong></small>
+            <br/>
+            <div id="company_name" style="padding-right: 80px;">-</div>
+            <br/>
+            <small><strong>Web page:</strong></small>
+            <div id="web_page" style="padding-right: 80px;">-</div>
+            <br/>
+            <small><strong>Who is:</strong></small>
+            <div id="who_is" style="padding-right: 80px;">-</div>
+          </div>
         </div>
       </div>
     </div>
 
 
     <div class="card" style="margin-top: 20px; margin-right: 20px">
-                    <div class="card-header"> Simple Table</div>
-                    <div class="card-body">
-                      <table class="table table-responsive-sm">
-                        <thead>
-                          <tr>
-                            <th>Name of value</th>
-                            <th>Value</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>Samppa Nori</td>
-                            <td>2012/01/01</td>
-                          </tr>
-                          <tr>
-                            <td>Estavan Lykos</td>
-                            <td>2012/02/01</td>
-                          </tr>
-                          <tr>
-                            <td>Chetan Mohamed</td>
-                            <td>2012/02/01</td>
-                          </tr>
-                          <tr>
-                            <td>Derick Maximinus</td>
-                            <td>2012/03/01</td>
-                          </tr>
-                          <tr>
-                            <td>Friderik Dávid</td>
-                            <td>2012/01/21</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
+      <div class="card-header">Company details</div>
+      <div class="card-body">
+        <table class="table table-responsive-sm">
+          <tbody id="company_details_table">
+          </tbody>
+        </table>
+      </div>
+    </div>
 
 </div>
 
