add whoIs values

--- a/templates/company.html
+++ b/templates/company.html
@@ -19,7 +19,7 @@
         <div class="form-group row">
           <div class="col-md-12">
             <div class="input-group">
-              <a class="fa fa-home" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
+              <a class="fa fa-search" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
               <tr>
                 <td><span id="company_title" class="display-4" style="font-size: 2.0rem;"></span></td>
               </tr>
@@ -100,15 +100,6 @@
         <div class="card card-accent-info" style="height: 100%;">
           <div class="card-header">Company details</div>
           <div class="card-body" style="font-size: 1.0vw; width: 40vw">
-            <small><strong>Company Name:</strong></small>
-            <br/>
-            <div id="company_name" style="padding-right: 80px;">-</div>
-            <br/>
-            <small><strong>Web page:</strong></small>
-            <div id="web_page" style="padding-right: 80px;">-</div>
-            <br/>
-            <small><strong>Who is:</strong></small>
-            <div id="who_is" style="padding-right: 80px;">-</div>
           </div>
         </div>
       </div>
