--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
         <div class="form-group row">
           <div class="col-md-12">
             <div class="input-group">
-              <a class="fa fa-home" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
+              <a class="fa fa-search" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
               <input class="form-control" style="color: black" id="search_input" type="text" name="input2-group2" placeholder="Type..." autocomplete="email"><span class="input-group-append">
                 <button onclick="onSearch()" id="search_btn" class="btn btn-info" type="button">Search</button></span>
             </div>
