--- a/templates/company.html
+++ b/templates/company.html
@@ -61,7 +61,7 @@
         <i id="scam_watcher_icon" aria-hidden="true" style="font-size: 9vw;color: #39f;"></i>
         <small id="scam_watcher_label" class="text-muted text-uppercase font-weight-bold" style="position: absolute;bottom: 50px; text-align: center; padding: 3%; top: 30%; font-size:1vw">Test</small>
       </div>
-    </div> 
+    </div>
 
     <div class="card">
       <div class="card-body">
@@ -109,8 +109,9 @@
 
       <div style="padding-right: 20px; width: 50%">
         <div class="card card-accent-info" style="height: 100%;">
-          <div class="card-header">Company details</div>
-          <div class="card-body" style="font-size: 1.0vw; width: 40vw">
+          <div class="card-header">White list</div>
+          <div class="card-body" style="font-size: 1.0vw; width: 32vw">
+            <a id="white_list"/>
           </div>
         </div>
       </div>
