--- a/templates/company.html
+++ b/templates/company.html
@@ -20,6 +20,7 @@
           <div class="col-md-12">
             <div class="input-group">
               <a class="fa fa-search" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
+              <a class="fa fa-connectdevelop" onclick="document.location='graph.html'" style="font-size: 34px; margin-right: 10px"></a>
               <tr>
                 <td><span id="company_title" class="display-4" style="font-size: 2.0rem;"></span></td>
               </tr>
