delete graph page

--- a/templates/company.html
+++ b/templates/company.html
@@ -20,7 +20,6 @@
           <div class="col-md-12">
             <div class="input-group">
               <a class="fa fa-search" onclick="document.location='index.html'" style="font-size: 34px; margin-right: 10px"></a>
-              <a class="fa fa-connectdevelop" onclick="document.location='graph.html'" style="font-size: 34px; margin-right: 10px"></a>
               <tr>
                 <td><span id="company_title" class="display-4" style="font-size: 2.0rem;"></span></td>
               </tr>
@@ -87,7 +86,8 @@
           </div>
           <div style="margin: auto;">
             <div id="in_poland_label" class="text-value text-info" style="font-size: 1.2vw;">Targeted to Polish clients:</div>
-            <div id="in_poland_value" class="text-muted text-uppercase font-weight-bold small" style="text-align: center; font-size: 1.2vw; height: 1.5vw;"></div>
+            <div id="in_poland_value" class="text-muted text-uppercase font-weight-bold small" style="font-size: 1.2vw; height: 1.5vw;"></div>
+            <div id="in_poland_reason_value" class="text-value text-info" style="font-size: 1.2vw;"></div>
           </div>
         </div>
       </div>
