--- a/templates/company.html
+++ b/templates/company.html
@@ -63,18 +63,17 @@
       </div>
     </div>
 
+  </div>
+
+
+    <div>
     <div class="card">
       <div class="card-body">
-        <!-- <i id="scam_watcher_icon" aria-hidden="true" style="font-size: 9vw;color: #39f;"></i> -->
-        <!-- <small id="knf_list_label" class="text-muted text-uppercase font-weight-bold" style="position: absolute;bottom: 50px; text-align: center; padding: 3%; top: 30%; font-size:1vw">Test</small> -->
-        <table class="table table-responsive-sm">
-          <tbody id="knf_list_table">
-          </tbody>
-        </table>
+        <small class="text-muted text-uppercase font-weight-bold" style="font-size:1vw">Built with</small>
+        <div id="built_with_card"></div>
       </div>
     </div>
   </div>
-
 
     <div>
       <div class="card overflow-hidden">
@@ -110,7 +109,7 @@
       <div style="padding-right: 20px; width: 50%">
         <div class="card card-accent-info" style="height: 100%;">
           <div class="card-header">White List</div>
-          <div class="card-body" style="font-size: 1.0vw; width: 32vw">
+          <div class="card-body" style="font-size: 1.0vw; width: 32vw; margin-right: 60px;">
             <a id="white_list"/>
           </div>
         </div>
@@ -127,6 +126,8 @@
         </table>
       </div>
     </div>
+
+
 
 </div>
 
