--- a/templates/home.html
+++ b/templates/home.html
@@ -54,8 +54,10 @@
   input.addEventListener("keyup", function(event) {
     if (event.key === "Enter") {
       event.preventDefault();
-      document.getElementById("search_btn").click();
+      //document.getElementById("search_btn").click();
     }
+    console.log("aaaaa")
+    getSuggestions();
   });
 
 </script>
